--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1",
   "description": "Slides for the meetup",
   "scripts": {
-    "start": "reveal-md index.md"
+    "start": "reveal-md index.md",
+    "build": "reveal-md index.md --static build"
   },
   "dependencies": {
     "reveal-md": "^5.1.3"
